tests: delete package after the test

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,8 +10,8 @@ jobs:
     env:
       REGISTRY_USERNAME: ${{ github.repository_owner }}
       REGISTRY_PASSWORD: ${{ secrets.GHCR_PAT }}
-      REGISTRY_REPOADDR: ghcr.io/${{ github.repository }}
-      REGISTRY_TAGNAME: pr-${{ github.event.pull_request.number }}
+      REGISTRY_REPOADDR: ghcr.io/ricardomaraschini/imo
+      REGISTRY_IMGNAME: pr-${{ github.event.pull_request.number }}
     steps:
     - name: install dependencies
       run: |
@@ -25,13 +25,11 @@ jobs:
       uses: actions/checkout@v4
     - name: run tests
       run: go test -tags containers_image_openpgp -v ./...
-    - name: prune ghcr
-      uses: vlaurin/action-ghcr-prune@v0.5.0
+    - name: delete temporary package
+      uses: actions/delete-package-versions@v4
       with:
+        owner: ${{ github.repository_owner }}
+        package-name: imo/pr-${{ github.event.pull_request.number }}
+        package-type: container
+        min-versions-to-keep: 0
         token: ${{ secrets.GHCR_PAT }}
-        user:  ${{ github.repository_owner }}
-        container: imo/e2e
-        prune-untagged: true
-        keep-last: 2
-        prune-tags-regexes: |
-          ^pr-${{ github.event.pull_request.number }}$
